# KindMatrix

./: LICENSE  README.md  kind-matrix.cabal
src/Data/: Matrix.hs
src/Util/: NatValue.hs
