name:                kind-matrix
version:             0.1.0
synopsis:            DataKinds and matrices
description:         Please see README.md
homepage:            https://github.com/maximsmol/KindMatrix#readme
license:             MIT
license-file:        LICENSE
author:              Maksim Smolin
maintainer:          maximsmol@gmail.com
copyright:           2017 Maksim Smolin
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Matrix
  build-depends:       base >= 4.7 && < 5, vector >= 0.11 && < 1
  default-language:    Haskell2010

test-suite kind-matrix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, kind-matrix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maximsmol/KindMatrix
